<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abigel">Abigel</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_stock">Add Stock</string>
    <string name="add_sub_user">Add sub user</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address (Line 1)</string>
    <string name="address_line_2">Address (Line 2)</string>
    <string name="admin">Admin</string>
    <string name="age">Age</string>
    <string name="alerts">Alerts</string>
    <string name="app_name">DrIndian</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="batch">Batch</string>
    <string name="bill_summary">Bill Summary</string>
    <string name="bottle">Bottle</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="city">City</string>
    <string name="close">Close</string>
    <string name="country">Country</string>
    <string name="daily_report">Daily\nReport</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_registration_no">Doctor Registration No.</string>
    <string name="doctors">Doctors</string>
    <string name="dom">DOM</string>
    <string name="downloading_msg">Downloading medicines data first time</string>
    <string name="drug_licence_number">Drug Licence Number</string>
    <string name="email">Email</string>
    <string name="empty"></string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="expiry">Expiry</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="front_desk">Front Desk</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender :</string>
    <string name="generic_name">Generic Name</string>
    <string name="gst_tax">GST Tax(%)</string>
    <string name="gstin">GSTIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint">hint</string>
    <string name="hospital_name_address">Hospital Name, Address</string>
    <string name="labs">Labs</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="medical_store">Medical Store</string>
    <string name="medical_stores">Medical Stores</string>
    <string name="medicine_name">Medicine name</string>
    <string name="mobile_no">Mobile no</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="monthly_report">Monthly\nReport</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="new_prescription">New Prescription</string>
    <string name="no_items">No items</string>
    <string name="order">Order</string>
    <string name="packedQty">Quantity</string>
    <string name="password">Password</string>
    <string name="password_sub_user">Password (Sub user)</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="patient_name">Patient Name</string>
    <string name="patients">Patients</string>
    <string name="pin_code">Pin code</string>
    <string name="prescription_id">Prescription ID</string>
    <string name="price">Price</string>
    <string name="print">Print</string>
    <string name="proceed">Proceed</string>
    <string name="purchasedBill">Bill</string>
    <string name="purchased_from">Purchased From</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me</string>
    <string name="reports">Reports</string>
    <string name="role">Role :</string>
    <string name="rupees">₹</string>
    <string name="rx">Rx,</string>
    <string name="scan">Scan</string>
    <string name="search">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="send_otp">Send OTP</string>
    <string name="send_otp_again">Send OTP \nAgain</string>
    <string name="share">Share</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign Up</string>
    <string name="state">State</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stockQty">Stock :</string>
    <string name="stock_status">Stock Status</string>
    <string name="strip">Strip</string>
    <string name="sub_user">Sub user</string>
    <string name="sub_users">Sub users</string>
    <string name="subscription_end_date">Subscription End Date</string>
    <string name="substitutes">Substitutes</string>
    <string name="taxes">Taxes :</string>
    <string name="title_activity_medical_dashboard">MedicalDashboardActivity</string>
    <string name="today_s_cash_collection">Today\'s cash collection :</string>
    <string name="todo">TODO</string>
    <string name="total">Total</string>
    <string name="trade_name">Trade Name</string>
    <string name="transgender">Transgender</string>
    <string name="type">| Type :</string>
    <string name="type1">Type :</string>
    <string name="type2">Type</string>
    <string name="type_medicine_name">Type medicine name</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="username_sub_user">Username (Sub user)</string>
    <string name="verify">Verify</string>
    <string name="weekly_report">Weekly\nReport</string>
    <string name="welcome">WELCOME</string>
    <string name="yearly_bill">Yearly\nBill</string>
</resources>
