<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <RelativeLayout android:background="@color/colorLight" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/home_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20sp" android:src="@mipmap/medicals" android:layout_centerHorizontal="true" />
        <TextView android:textColor="@color/buttonColor" android:id="@id/textViewTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5sp" android:text="@string/medical_store" android:layout_below="@id/home_icon" android:layout_centerHorizontal="true" />
        <RadioGroup android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:id="@id/radioGroup1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/textViewTitle">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/role" />
            <RadioButton android:id="@id/radioButtonAdmin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/admin" />
            <RadioButton android:id="@id/radioButtonSubUser" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sub_user" />
        </RadioGroup>
        <android.support.design.widget.TextInputLayout android:id="@id/textInputLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_below="@id/radioGroup1" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:hintTextAppearance="@style/editTextStyle">
            <EditText android:id="@id/editTextUsername" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/username" android:lines="1" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:id="@id/textInputLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_below="@id/textInputLayout" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:hintTextAppearance="@style/editTextStyle">
            <EditText android:id="@id/editTextPwd" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/password" android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious" android:textCursorDrawable="0x0" />
        </android.support.design.widget.TextInputLayout>
        <include android:visibility="gone" layout="@layout/layout_sign_up" />
        <CheckBox android:id="@id/checkBoxRemember" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remember_me" android:layout_below="@id/signUpLayout" android:layout_centerHorizontal="true" />
        <Button android:id="@id/buttonSignIn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_in" android:layout_below="@id/checkBoxRemember" android:onClick="onButtonClick" android:layout_toStartOf="@id/buttonSignUp" style="@style/Base.Widget.AppCompat.Button.Colored" />
        <Button android:id="@id/buttonSignUp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_up" android:layout_below="@id/checkBoxRemember" android:onClick="onButtonClick" android:layout_alignParentEnd="true" style="@style/Base.Widget.AppCompat.Button.Colored" />
        <Button android:id="@id/buttonBack" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back" android:layout_below="@id/checkBoxRemember" android:onClick="onButtonClick" android:layout_toStartOf="@id/buttonSignUp" style="@style/Base.Widget.AppCompat.Button.Colored" />
        <Button android:id="@id/buttonRegister" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register" android:layout_below="@id/checkBoxRemember" android:onClick="onButtonClick" android:layout_alignParentEnd="true" style="@style/Base.Widget.AppCompat.Button.Colored" />
        <ProgressBar android:id="@id/progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:layout_centerInParent="true" />
    </RelativeLayout>
</ScrollView>
