<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5sp" android:weightSum="2.0">
        <Button android:textColor="@color/colorPrimaryDark" android:id="@id/buttonDailyReport" android:padding="20sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10sp" android:text="@string/daily_report" android:drawableTop="@mipmap/reports" android:drawablePadding="10sp" android:layout_weight="1.0" />
        <Button android:textColor="@color/colorPrimaryDark" android:id="@id/buttonYearlyBill" android:paddingLeft="30sp" android:paddingTop="20sp" android:paddingRight="30sp" android:paddingBottom="20sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10sp" android:text="@string/yearly_bill" android:drawableTop="@mipmap/date" android:drawablePadding="10sp" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5sp" android:weightSum="2.0">
        <Button android:textColor="@color/colorPrimaryDark" android:id="@id/buttonWeeklyReport" android:padding="20sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10sp" android:text="@string/weekly_report" android:drawableTop="@mipmap/reports" android:drawablePadding="10sp" android:layout_weight="1.0" />
        <Button android:textColor="@color/colorPrimaryDark" android:id="@id/buttonMonthlyReport" android:paddingLeft="30sp" android:paddingTop="20sp" android:paddingRight="30sp" android:paddingBottom="20sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10sp" android:text="@string/monthly_report" android:drawableTop="@mipmap/reports" android:drawablePadding="10sp" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textAppearance="@*android:style/TextAppearance.Large" android:id="@id/textViewCashCollection" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_horizontal_margin" android:text="@string/today_s_cash_collection" />
</LinearLayout>
