<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/colorLight" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@*android:style/TextAppearance.Large" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:layout_marginRight="8dp" android:text="@string/welcome" android:layout_constraintHorizontal_bias="0.501" android:layout_constraintLeft_toLeftOf="0" android:layout_constraintRight_toRightOf="0" android:layout_constraintTop_toTopOf="0" />
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="2.0">
            <Button android:textColor="@color/colorPrimaryDark" android:id="@+id/buttonMedicals" android:paddingTop="20sp" android:paddingBottom="20sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10sp" android:text="@string/medical_stores" android:drawableTop="@mipmap/medicals" android:drawablePadding="20sp" android:layout_weight="1.0" android:onClick="onClick" />
            <Button android:textColor="@color/colorPrimaryDark" android:id="@+id/buttonDoctors" android:paddingTop="20sp" android:paddingBottom="20sp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="10sp" android:layout_marginTop="32dp" android:text="@string/doctors" android:drawableTop="@mipmap/doctors" android:drawablePadding="20sp" android:layout_weight="1.0" android:onClick="onClick" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="2.0">
            <Button android:textColor="@color/colorPrimaryDark" android:id="@+id/buttonFrontDesk" android:paddingTop="20sp" android:paddingBottom="20sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10sp" android:text="@string/front_desk" android:drawableTop="@mipmap/front_desk" android:drawablePadding="20sp" android:layout_weight="1.0" android:onClick="onClick" />
            <Button android:textColor="@color/colorPrimaryDark" android:id="@+id/buttonLabs" android:paddingTop="20sp" android:paddingBottom="20sp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="10sp" android:layout_marginTop="32dp" android:text="@string/labs" android:drawableTop="@mipmap/labs" android:drawablePadding="20sp" android:layout_weight="1.0" android:onClick="onClick" />
        </LinearLayout>
        <Button android:textColor="@color/colorPrimaryDark" android:id="@+id/buttonPatients" android:paddingLeft="40sp" android:paddingTop="20sp" android:paddingRight="40sp" android:paddingBottom="20sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10sp" android:layout_marginTop="32dp" android:text="@string/patients" android:drawableTop="@mipmap/patients" android:drawablePadding="20sp" android:onClick="onClick" />
    </LinearLayout>
</ScrollView>
